--- a/README.adoc
+++ b/README.adoc
@@ -4,14 +4,12 @@
 
 https://github.com/jlevy/the-art-of-command-line
 
-testowanie xD
 
-git init
-git remote
+git clone
 git add README.adoc
 git commit -m "yes"
 git push
 
 instalowanie FiraCode
 
-testowanie 2
+
