--- a/README.adoc
+++ b/README.adoc
@@ -4,11 +4,16 @@
 
 https://github.com/jlevy/the-art-of-command-line
 
+testowanie xD
 
+```sh
+git init
+git remote
 git clone
 git add README.adoc
 git commit -m "yes"
 git push
+```
 
 instalowanie FiraCode
 
